--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -19,7 +19,7 @@
         <h4 class="text-white text-w-700 text-s-20">Masuk</h4>
         <form action="" class="mt-3" [formGroup]="loginForm">
           <div>
-            <ion-input placeholder="Nomor NISN" fill="outline" formControlName="nisn">
+            <ion-input placeholder="Nomor Nomor Identitas" fill="outline" formControlName="student_number">
               <ion-icon slot="start" name="mail-outline" class="suffix-icon" aria-hidden="true"
                 style="font-size: 20px;"></ion-icon>
             </ion-input>
