--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,51 +1,341 @@
-ion-modal {
-  --ion-background-color: #ffffff !important;
-  --ion-background: #ffffff !important;
-  --background: #ffffff !important;
+$white: #f5f5f5;
+$dark: #2c3e50;
+$lighter: #32465a;
+$lightest: #496886;
+$light: #435f7a;
+$red: #e74c3c;
+$green: #2ecc71;
+$yellow: #f1c40f;
+$gray: #95a5a6;
+$break: 735px;
+$break-big: 900px;
+// MASOK ======================================================================================
+
+.fab-wrapper {
+  position: fixed;
+  bottom: 2rem;
+  right: 2rem;
+}
+.fab-checkbox {
+  display: none;
+}
+.fab {
+  position: absolute;
+  bottom: -1rem;
+  right: -1rem;
+  width: 4rem;
+  height: 4rem;
+  background: blue;
+  border-radius: 50%;
+  background: #126ee2;
+  box-shadow: 0px 5px 20px #81a4f1;
+  transition: all 0.3s ease;
+  z-index: 1;
+  border-bottom-right-radius: 6px;
+  border: 1px solid #0c50a7;
 }
 
-ion-loading.custom-loading {
-  --background: #e3edff;
-  --spinner-color: #1c6dff;
-
-  color: #1c6dff;
+.fab:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.fab-checkbox:checked ~ .fab:before {
+  width: 90%;
+  height: 90%;
+  left: 5%;
+  top: 5%;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+.fab:hover {
+  background: #2c87e8;
+  box-shadow: 0px 5px 20px 5px #81a4f1;
 }
 
-.home-top {
-  // background-color: rgba(171, 207, 210, 0.5);
-  background-image: url('/assets/img/background.jpg');
-  background-size: contain;
-  height: 25% !important;
+.fab-dots {
+  position: absolute;
+  height: 8px;
+  width: 8px;
+  background-color: white;
+  border-radius: 50%;
+  top: 50%;
+  transform: translateX(0%) translateY(-50%) rotate(0deg);
+  opacity: 1;
+  animation: blink 3s ease infinite;
+  transition: all 0.3s ease;
 }
 
-.logo {
-  height: 35px;
-  width: 35px;
-  background-color: #E2EAF7;
+.fab-dots-1 {
+  left: 15px;
+  animation-delay: 0s;
+}
+.fab-dots-2 {
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  animation-delay: 0.4s;
+}
+.fab-dots-3 {
+  right: 15px;
+  animation-delay: 0.8s;
+}
+
+.fab-checkbox:checked ~ .fab .fab-dots {
+  height: 6px;
+}
+
+.fab .fab-dots-2 {
+  transform: translateX(-50%) translateY(-50%) rotate(0deg);
+}
+
+.fab-checkbox:checked ~ .fab .fab-dots-1 {
+  width: 32px;
+  border-radius: 10px;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%) rotate(45deg);
+}
+.fab-checkbox:checked ~ .fab .fab-dots-3 {
+  width: 32px;
+  border-radius: 10px;
+  right: 50%;
+  transform: translateX(50%) translateY(-50%) rotate(-45deg);
+}
+
+@keyframes blink {
+  50% {
+    opacity: 0.25;
+  }
+}
+
+.fab-checkbox:checked ~ .fab .fab-dots {
+  animation: none;
+}
+
+.fab-wheel {
+  // position: absolute;
+  // bottom: 0;
+  // right: 0;
+  // width: 10rem;
+  // height: 10rem;
+  // transition: all 0.3s ease;
+  // transform-origin: bottom right;
+  // transform: scale(0);
+
+  position: absolute;
+  bottom: 70px;
+  right: 0;
+  // top: 10;
+  // left: 0;
+  // width: 17em;
+  // height: 30em;
+  transition: all .3s ease;
+  transform-origin: bottom right;
+  transform: scale(0);
+  border: 1px solid #000;
+  border-radius: 5px;
+  // background-color: $lightest;
+  background-color: #e0e0e0;
+}
+
+.fab-checkbox:checked ~ .fab-wheel {
+  transform: scale(1);
+}
+.fab-action {
+  position: absolute;
+  background: #0f1941;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 50%;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  color: White;
+  box-shadow: 0 0.1rem 1rem rgba(24, 66, 154, 0.82);
+  transition: all 1s ease;
 
-  border-radius: 35px;
+  opacity: 0;
 }
 
-.logo img {
-  height: 18px;
-  height: 18px;
+.fab-checkbox:checked ~ .fab-wheel .fab-action {
+  opacity: 1;
 }
 
-.custom-toast {
-  --background: #3232c4;
-  --box-shadow: 3px 3px 10px 0 rgba(213, 13, 13, 0.2);
-  --color: #11e01b;
+.fab-action:hover {
+  background-color: #f16100;
 }
 
-.custom-toast::part(message) {
-  font-style: italic;
+.fab-wheel .fab-action-1 {
+  right: -1rem;
+  top: 0;
 }
 
-.custom-toast::part(button) {
-  border-left: 1px solid #d2d2d2;
-  color: #030207;
-  font-size: 15px;
+.fab-wheel .fab-action-2 {
+  right: 3.4rem;
+  top: 0.5rem;
+}
+.fab-wheel .fab-action-3 {
+  left: 0.5rem;
+  bottom: 3.4rem;
+}
+.fab-wheel .fab-action-4 {
+  left: 0;
+  bottom: -1rem;
+}
+
+
+
+//  MESSAGE
+.messages {
+  height: auto;
+  min-height: calc(100% - 200px);
+  max-height: calc(100% - 200px);
+  overflow-y: scroll;
+  overflow-x: hidden;
+  @media screen and (max-width: $break) {
+    max-height: calc(100% - 160px);
+  }
+
+  &::-webkit-scrollbar {
+      width: 8px;
+    background: rgba(0, 0, 0, .0);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, .3);
+  }
+
+  ul {
+
+    li {
+      display: inline-block;
+      clear: both;
+      float: left;
+      margin: 15px 15px 5px 15px;
+      width: calc(100% - 25px);
+      font-size: 0.9em;
+
+      &:nth-last-child(1) {
+        margin-bottom: 20px;
+      }
+
+      &.sent {
+
+        img {
+          margin: 6px 8px 0 0;
+        }
+
+        p {
+          background: $light;
+          color: $white;
+        }
+      }
+
+      &.replies {
+
+        img {
+          float: right;
+          margin: 6px 0 0 8px;
+        }
+
+        p {
+          background: $white;
+          float: right;
+        }
+      }
+
+      img {
+        width: 22px;
+        border-radius: 50%;
+        float: left;
+      }
+
+      p {
+        display: inline-block;
+        padding: 10px 15px;
+        border-radius: 20px;
+        max-width: 205px;
+        line-height: 130%;
+        @media screen and (min-width: $break) {
+          max-width: 300px;
+        }
+      }
+    }
+  }
+}
+
+
+.message-input {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  z-index: 99;
+
+  .wrap {
+    position: relative;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    flex-wrap: wrap;
+
+    input {
+      font-family: "proxima-nova",  "Source Sans Pro", sans-serif;
+      float: left;
+      border: none;
+      width: calc(100% - 90px);
+      padding: 11px 32px 10px 8px;
+      font-size: 0.8em;
+      color: $lighter;
+      @media screen and (max-width: $break) {
+        padding: 15px 32px 16px 8px;
+      }
+
+      &:focus {
+        outline: none;
+      }
+    }
+
+    .attachment {
+      position: absolute;
+      right: 60px;
+      z-index: 4;
+      margin-top: 10px;
+      font-size: 1.1em;
+      color: $light;
+      opacity: .5;
+      cursor: pointer;
+      @media screen and (max-width: $break) {
+        margin-top: 17px;
+        right: 65px;
+      }
+
+      &:hover {
+        opacity: 1;
+      }
+    }
+
+    button {
+      float: right;
+      // border: none;
+      // width: 50px;
+      // padding: 12px 0;
+      cursor: pointer;
+      background: $lighter;
+      color: $white;
+      @media screen and (max-width: $break) {
+        // padding: 16px 0;
+      }
+
+      &:hover {
+        background: $light;
+      }
+
+      &:focus {
+        outline: none;
+      }
+    }
+  }
 }
