--- a/src/global.scss
+++ b/src/global.scss
@@ -27,5 +27,21 @@
 
 
 .gap-10 {
-    gap: 10px;
-  }
+  gap: 10px;
+}
+
+.text-orange {
+  color: #EF4706;
+}
+
+.bg-orange {
+  background-color: #EF4706;
+}
+
+p {
+  font-size: 11px;
+}
+
+.ml-2 {
+  margin-left: 1rem;
+}
