--- a/src/app/auth/login/login.page.html
+++ b/src/app/auth/login/login.page.html
@@ -1,55 +1,37 @@
 <ion-content [fullscreen]="true">
-  <div class="h-100 w-100 cover-splash-login" *ngIf="state === 'splash'">
-    <img src="./assets/img/icon-login-2.png" class="" style="margin-top: 8rem;" alt="">
-    <div class="d-flex flex-column align-items-center justify-content-center"
-      style="position: absolute; bottom: 0; width: 100%;">
-      <ion-button shape="round" (click)="state = 'login'"
-        style="width: 70%; margin-top: 2rem; height: 60px; border-radius: 40px; margin-bottom: 8rem;">
-        Masuk Sekarang
-        <ion-icon slot="end" name="arrow-forward-outline"></ion-icon>
-      </ion-button>
-      <p>&copy; HadirAJa</p>
-    </div>
+
+  <div class="d-flex flex-column align-items-center justify-content-center h-100" style="gap: 20px;" *ngIf="state === 'pre-login'">
+    <img src="./assets/icon/baru_nasmoco_png.png" class="" alt="" style="width: 30%;">
+    <!-- <ion-buttons slot="secondary">
+      <ion-button size="large" style="background-color: #EF4706;"> Masuk </ion-button>
+    </ion-buttons> -->
+
+    <button class="btn btn-sm text-white" style="background-color: #EF4706; width: 50%;" (click)="state = 'login'"><b>Masuk</b></button>
+
+    <p>Belum punya akun? <span class="text-orange">DAFTAR</span></p>
   </div>
-  <div class="h-100 w-100 cover-login" *ngIf="state === 'login'">
-    <!-- <img src="./assets/export-figma/login/bg-1.png" alt=""> -->
 
-    <div class="card" style="position: absolute; bottom: 0; min-height: 53%; width: 100%; background-color: #5f9592; border-radius: 20px 20px 0px 0px;">
-      <div class="card-body">
-        <h4 class="text-white text-w-700 text-s-20">Masuk</h4>
-        <form action="" class="mt-3" [formGroup]="loginForm">
-          <div>
-            <ion-input placeholder="Nomor Nomor Identitas" fill="outline" formControlName="student_number">
-              <ion-icon slot="start" name="mail-outline" class="suffix-icon" aria-hidden="true"
-                style="font-size: 20px;"></ion-icon>
-            </ion-input>
-          </div>
+  <div *ngIf="state === 'login'">
+    <div class="header bg-orange">
+      <p class="text-white px-2 py-1"><b>MASUK</b></p>
+    </div>
 
-          <div class="mt-3">
-            <ion-input fill="outline" type="password" placeholder="Kata Sandi" formControlName="password">
-              <ion-icon slot="start" name="key-outline" class="suffix-icon" aria-hidden="true" style="font-size: 20px;">
-              </ion-icon>
-            </ion-input>
-          </div>
+    <div class="body-login ion-padding">
+      <form action="" class="mt-3" [formGroup]="loginForm">
+        <div class="d-flex flex-column align-items-center h-100" style="gap: 20px;">
 
-          <div class="mt-2" style="width: 100%">
-            <p class="text-white">Lupa kata sandi?</p>
-            <button class="btn btn-warning mt-2" style="
-                    width: 100%;
-                    height: 50px;
-                    border-radius: 15px;
-                    color: #ffffff;
-                    background-color: #dfbc33;
-                  " (click)="onSubmit()">
-              Mulai Sekarang
-            </button>
-          </div>
+          <img src="./assets/icon/baru_nasmoco_png.png" class="" alt="" style="width: 30%;">
 
-          <div class="mt-3 text-center">
-            <p class="text-white">&copy; Hadir Aja</p>
+          <ion-input label="Email" class="custom" label-placement="floating" placeholder="" formControlName="student_number"></ion-input>
+          <ion-input label="Kata Sandi" class="custom" label-placement="floating" placeholder="" formControlName="password"></ion-input>
+
+          <button type="submit" (click)="onSubmit()" class="btn btn-md text-white w-100" style="background-color: #EF4706; width: 50%;" (click)="state = 'login'"><b>MASUK</b></button>
+
+          <div class="d-flex align-items-end justify-content-end w-100">
+            <p><b class="text-orange">Lupa Password ?</b></p>
           </div>
-        </form>
-      </div>
+        </div>
+      </form>
     </div>
   </div>
 
