--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -51,12 +51,12 @@
       <div class="card-body" style="min-height: 100%;">
 
         <!-- WARNING -->
-        <div class="card mt-2" style="border-radius: 12px; background-color: #FFF8DD;" *ngIf="this.user?.selfie_img === null">
+        <div class="card mt-2" style="border-radius: 12px; background-color: #FFF8DD;" *ngIf="this.user?.selfie_img === null || true">
           <div class="card-body">
             <div class="d-flex flex-row align-items-start gap-10">
               <ion-icon name="alert-circle-outline"></ion-icon>
               <div>
-                <p class=" mt-0" style="font-size: 12px;">Update foto anda untuk melakukan presensi!</p>
+                <p class=" mt-0" style="font-size: 12px;">Perbarui foto anda secara berkala disini!</p>
                 <button class="btn btn-sm btn-primary" (click)="takeSelfie()">Update Foto</button>
               </div>
             </div>
@@ -157,10 +157,10 @@
                 <div class="d-flex justify-content-between align-items-center w-100">
                   <div class="d-flex flex-column justify-content-center">
                     <h5 class="mt-0 mb-0" style="font-size: 13px; font-weight: 500;">Absen {{ item.ref_table === 'presence_barcode_school_users' ? 'Kelas | ' : 'Harian |' }} {{ item?.type === 'in' ? 'Masuk' : (item?.type === 'out' ? 'Keluar' : '-') }}</h5>
-                    <p class="text-dark mt-0 mb-0" style="font-size: 11px;">{{ rMoment(item?.presence?.presence_date, 'YYYY-MM-DD').locale('id').format('D MMM Y') }}</p>
+                    <p class="text-dark mt-0 mb-0" style="font-size: 11px;">{{ rMoment(item?.presence?.presence_date, 'YYYY-MM-DD').format('D MMM Y') }}</p>
                   </div>
 
-                  <h5 class="mt-0 mb-0" style="font-size: 14px; font-weight: 600;">{{ rMoment(item?.datetime, 'H:mm').locale('id').format('H:mm') }} WIB</h5>
+                  <h5 class="mt-0 mb-0" style="font-size: 14px; font-weight: 600;">{{ rMoment(item?.datetime, 'YYYY-MM-DD H:mm').format('H:mm') }} WIB</h5>
                 </div>
 
               </div>
